--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -8,6 +8,10 @@
   width: 50%;
 }
 
+.hero__content {
+  padding-top: 40px;
+}
+
 .hero__content h2 {
   font-size: 3rem;
   line-height: 65px;
@@ -20,4 +24,30 @@
 
 .highlight {
   color: var(--primary-color);
+}
+
+.hero__btns {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  column-gap: 2rem;
+}
+
+.primary__btn,
+.secondary__btn {
+  padding: 0.8rem 1.5rem;
+  border: none;
+  outline: none;
+  color: #fff;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.primary__btn {
+  background: var(--btn-secondary-bg);
+  border: 1px solid var(--btn-primary-bg);
+}
+
+.secondary__btn {
+  background: var(--btn-primary-bg);
 }
