dark/light mode completed

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -56,3 +56,11 @@
   font-size: 0.9rem;
   font-weight: 400;
 }
+
+.light-theme .quick__links-item a {
+  font-weight: 500;
+}
+
+.light-theme .copyright {
+  color: #555;
+}
