--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -37,8 +37,13 @@
   align-items: center;
   column-gap: 0.4rem;
   font-size: 0.8rem;
+  cursor: pointer;
 }
 
+.light-theme .light__mode span {
+  color: #000;
+  font-weight: 500;
+}
 .header__shrink {
   width: 100%;
   height: 80px;
