--- a/src/styles/newsletter.css
+++ b/src/styles/newsletter.css
@@ -29,3 +29,17 @@
   justify-content: space-between;
   border-radius: 0.5rem;
 }
+
+.light-theme .newsletter {
+  background: linear-gradient(
+    180deg,
+    rgba(189, 243, 255, 1) 29%,
+    rgba(193, 243, 255, 1) 50%,
+    rgba(226, 250, 255, 1) 78%
+  );
+}
+
+.light-theme .subscribe__btn {
+  background: var(--primary-color);
+  color: #fff;
+}
