--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -49,3 +49,31 @@
   font-size: 1.3rem;
   margin-bottom: 30px;
 }
+
+@media only screen and (max-width: 992px) {
+  .services__top-content h2 {
+    font-size: 1.5rem;
+  }
+  .service__item-wrapper {
+    flex-wrap: wrap;
+  }
+  .services__item {
+    width: 31%;
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .services__item {
+    width: 47.7%;
+  }
+  .service__title {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .services__item {
+    width: 100%;
+  }
+}
