--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -64,3 +64,28 @@
 .light-theme .copyright {
   color: #555;
 }
+
+@media only screen and (max-width: 768px) {
+  .footer__logo {
+    width: 50%;
+  }
+
+  .footer__wrapper {
+    flex-wrap: wrap;
+    column-gap: 1.5rem !important;
+    row-gap: 1.5rem;
+  }
+
+  .footer__logo h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .footer__quick-links {
+    width: 47%;
+  }
+  .footer__logo {
+    width: 47%;
+  }
+}
